# GMU---Premailer-CLI-for-Unisender

./: .gitignore  README.md  example.env  package-lock.json  package.json  pyproject.toml  requirements.txt
gmu/: archive.py  main.py  pdf.py  settings.py  version.py
gmu/campaign/: __init__.py  create_campaign.py  get_campaign_status.py  get_web_version.py
gmu/list/: create_list.py
gmu/message/: __init__.py  actual_version.py  create_message.py  create_update_message.py  delete_message.py  delete_to_wl.py  deploy_to_wl.py  get_message.py  send_test_email.py  update_message.py  upsert_message.py
gmu/utils/: GmuConfig.py  HTMLprocessor.py  SendSat.py  Unisender.py  archive.py  custom_css_inliner.py  git_sync.py  helpers.py  juice_config.js  juice_inliner.js  logger.py  node_module_loader.js  project_state.py  svg_converter.py  svg_to_png.js  unisender_urls.py  utils.py
gmu/webletter/: __init__.py  delete_to_wl.py  deploy_to_wl.py  upsert.py
